--- a/config.jsonc
+++ b/config.jsonc
@@ -33,7 +33,7 @@
     },
     {
       "type": "os",
-      "key": "╭─  OS",
+      "key": "╭─  Operating System",
       "keyColor": "cyan"
     },
     {
