--- a/config.jsonc
+++ b/config.jsonc
@@ -3,8 +3,8 @@
   "logo": {
     "type": "kitty-direct",
     "source": "~/.config/fastfetch/arch_logo.png ",
-    "width": 40,
-    "height": 16 
+    "width": 20,
+    "height": 9 
   },
   "display": {
     "separator": "   ",
@@ -13,7 +13,7 @@
   "modules": [
 	{
 	  "type": "title",
-    "key":"  USER AT",
+    "key":"",
     "keyColor": "green",
 	  "color": {
 		  "user": "green",
@@ -28,117 +28,39 @@
     "break",
     {
       "type": "custom",
-      "format": "\u001b[90m╭──────────────────────SYSTEM──────────────────────╮"
+      "format": "\u001b[90m╭────────────────────── cyphenstine's - system ──────────────────────╮"
       //'\u001b[90m' is for color
     },
     {
       "type": "os",
-      "key": "╭─  Operating System",
+      "key": "╭─󰣇",
       "keyColor": "cyan"
-    },
-    {
-      "type": "de",
-      "key": "├─󰧨  DESKTOP ENVIRONMENT",
-      "keyColor": "red"
-    },
-    {
-      "type": "kernel",
-      "key": "├─  KERNEL",
-      "keyColor": "yellow"
-    },
-    {
-      "type": "uptime",
-      "key": "├─  UPTIME",
-      "keyColor": "green"
-    },
-    {
-      "type": "packages",
-      "key": "├─  PACKAGES",
-      "keyColor": "blue"
-    },  
-    {
-      "type": "shell",
-      "key": "├─  SHELL",
-      "keyColor": "magenta"
-    },
-    {
-      "type": "wm",
-      "key": "├─  WINDOW MANAGER",
-      "keyColor": "cyan"
-    },
-    {
-      "type": "terminal",
-      "key": "╰─  TERMINAL",
-      "keyColor": "green"
-    },
-    "break",
-
-//themes :
-    {
-      "type": "custom",
-      "format": "\u001b[90m╭─────────────────────────────THEMES──────────────────────────────╮"
-      //'\u001b[90m' is for color
-    },
-    {
-      "type": "theme",
-      "key": "╭─󰔎  THEMES",
-      "keyColor": "cyan"
-    },
-    {
-      "type": "icons",
-      "key": "├─  ICONS",
-      "keyColor": "yellow"
-    },
-    {
-      "type": "terminalfont",
-      "key": "├─  FONT",
-      "keyColor": "green"
-    },
-    {
-      "type": "cursor",
-      "key": "├─  CURSOR",
-      "keyColor": "blue"
-    },
-    {
-      "type": "terminalfont",
-      "key": "╰─  TERMINAL FONT",
-      "keyColor": "red"
-    },
-    "break",
-
-//resources :
-    {
-      "type": "custom",
-      "format": "\u001b[90m╭────────────────────────────────RESOURCES─────────────────────────────────╮"
-      //'\u001b[90m' is for color
     },
     {
       "type": "cpu",
-      "key": "╭─  CPU",
-      "keyColor": "cyan"
-    },
-    {
-      "type": "gpu",
-      "key": "├─󰘚  GPU",
-      "keyColor": "yellow"
-    },
-    {
-      "type": "memory",
-      "key": "├─  MEMORY",  
+      "key": "├─",
       "keyColor": "green"
     },
     {
-      "type": "swap",
-      "key": "├─  SWAP",
-      "keyColor": "blue"
+      "type": "gpu",
+      "key": "├─󰘚",
+      "keyColor": "yellow"
     },
     {
-      "type": "disk",
-      "key": "╰─  DISK",
-      "keyColor": "magenta"
+      "type": "kernel",
+      "key": "├─",
+      "keyColor": "red"
     },
-    
+    {
+      "type": "de",
+      "key": "├─󰧨",
+      "keyColor": "magenta"
+    },  
+    {
+      "type": "shell",
+      "key": "╰─",
+      "keyColor": "blue"
+    },
     "break"
-    // "colors"
   ]
 }
