--- a/config.jsonc
+++ b/config.jsonc
@@ -2,8 +2,8 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetc h/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "kitty-direct",
-    "source": "~/.config/fastfetch/fedora_icon.png ",
-    "width": 23,
+    "source": "~/.config/fastfetch/tux.png ",
+    "width": 21,
     "height": 11 
   },
   "display": {
